<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scanner_camera_permission_title"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceTitleLarge" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/scanner_camera_permission_message"
        android:textAlignment="center"
        android:textAppearance="?attr/textAppearanceBodyMedium" />

    <Button
        android:id="@+id/permissions_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/scanner_camera_permission_button" />

</LinearLayout>
