<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.cart.CartFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/disclaimer_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/cart_disclaimer_message"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/disclaimer_label" />

        <TextView
            android:id="@+id/summary_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/cart_summary_title"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list" />

        <TextView
            android:id="@+id/total_amount_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/cart_total_amount"
            android:textAppearance="?attr/textAppearanceTitleSmall"
            app:layout_constraintEnd_toStartOf="@id/last_modification_title_label"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/summary_label" />

        <TextView
            android:id="@+id/last_modification_title_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/cart_last_modified"
            android:textAppearance="?attr/textAppearanceTitleSmall"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@id/total_amount_title_label"
            app:layout_constraintTop_toTopOf="@id/total_amount_title_label" />

        <TextView
            android:id="@+id/total_amount_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            app:layout_constraintEnd_toEndOf="@id/total_amount_title_label"
            app:layout_constraintStart_toStartOf="@id/total_amount_title_label"
            app:layout_constraintTop_toBottomOf="@id/total_amount_title_label"
            tools:text="€300" />

        <TextView
            android:id="@+id/last_modification_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:lines="1"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            app:layout_constraintEnd_toEndOf="@id/last_modification_title_label"
            app:layout_constraintStart_toStartOf="@id/last_modification_title_label"
            app:layout_constraintTop_toBottomOf="@id/last_modification_title_label"
            tools:text="5 seconds ago" />

        <Button
            android:id="@+id/purchase_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cart_purchase_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_amount_label"
            app:layout_constraintVertical_bias="0" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/content_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="list, summary_label, total_amount_title_label, total_amount_label, last_modification_title_label, last_modification_label, purchase_button"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/empty_message_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/cart_empty_message"
            android:textAlignment="center"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            app:layout_constraintBottom_toTopOf="@id/products_list_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/products_list_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginBottom="32dp"
            android:text="@string/cart_shop_products_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empty_message_label" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/empty_message_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="empty_message_label, products_list_button"
            tools:visibility="gone" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
